--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kll"]
 	path = kll
 	url = https://github.com/edoliberty/streaming-quantiles
+[submodule "streamhist"]
+	path = streamhist
+	url = https://github.com/carsonfarmer/streamhist
